# x11-input-mirror

./: Cargo.toml  GrabberConfig.toml  LICENSE  README.md  SecurityConfig.toml  ServerConfig.toml  build-binary-release.sh
Xephyr/: i3-chrome  start.sh
src/: config.rs  connector.rs  encryption.rs  keyboard_and_clicks.rs  keyboard_reset.rs  lib.rs  mouse.rs  pretty_panic.rs  utils.rs
